--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,45 @@
     justify-content: center;
     position: relative !important;
 }
+@media (max-width:371px) {
+    .img_phone{
+    width: 300px;
+    }
+    .bac_phone_big{
+      width: 280px !important;
+      height: 600px !important;
+    }
+    .bac_phone_small{
+width:100px;
+height:35px !important;
+    }
+    .bac_phone_big_2{
+        width: 280px !important;
+        height: 600px !important;
+    }
+    /* .open_screen{
+        width: 100px;
+        display: none;
+    } */
+    .open_screen_anderBoard{
+        width: 270px !important;
+        height:75px !important;
+        bottom: 30px !important;
+    }
+    .one1{
+        top: -2px !important;
+       right: 72px !important; 
+    }
+    .one2{
+        top: 5px !important;
+       right: 60px !important; 
+    }
+    .small_top_time{
+     
+top: -10px !important;
+left: 45px !important;
+    }
+}
 .bac_phone_big{
     background-image: url(../unnamed.jpg);
     background-repeat: no-repeat;
@@ -33,7 +72,6 @@
     backdrop-filter: blur(4px);
     display: flex;
     justify-content: center;
-    transition: all 0.5s ease-in-out;
 }
 .big_time{
     color:rgb(171, 16, 2);
@@ -91,3 +129,138 @@ color:white;
 top: -70px;
 left: 25px;
     }
+    .mine_time_top{
+        color: red;
+        position: absolute;
+        top: 0px;
+        z-index: 1000;
+    }
+.one1{
+    position: absolute;
+    top: -65px;
+}
+.one2{
+    position: absolute;
+    top: -57px;
+}
+.div_grid{
+    margin-top: -100px;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 14px;
+    justify-content: center;
+}
+
+
+  
+.button-82-pushable {
+  position: relative;
+  border: none;
+  background: transparent;
+  padding: 0;
+  cursor: pointer;
+  outline-offset: 4px;
+  transition: filter 250ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-82-shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  background: hsl(0deg 0% 0% / 0.25);
+  will-change: transform;
+  transform: translateY(2px);
+  transition:
+    transform
+    600ms
+    cubic-bezier(.3, .7, .4, 1);
+}
+
+.button-82-edge {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  background: linear-gradient(
+    to left,
+    hsl(340deg 100% 16%) 0%,
+    hsl(340deg 100% 32%) 8%,
+    hsl(340deg 100% 32%) 92%,
+    hsl(340deg 100% 16%) 100%
+  );
+}
+
+.button-82-front {
+  display: block;
+  position: relative;
+  padding: 12px 27px;
+  border-radius: 12px;
+  font-size: 1.1rem;
+  color: white;
+  background: hsl(345deg 100% 47%);
+  will-change: transform;
+  transform: translateY(-4px);
+  transition:
+    transform
+    600ms
+    cubic-bezier(.3, .7, .4, 1);
+}
+
+@media (min-width: 768px) {
+  .button-82-front {
+    font-size: 1.25rem;
+    padding: 12px 42px;
+  }
+}
+
+.button-82-pushable:hover {
+  filter: brightness(110%);
+  -webkit-filter: brightness(110%);
+}
+
+.button-82-pushable:hover .button-82-front {
+  transform: translateY(-6px);
+  transition:
+    transform
+    250ms
+    cubic-bezier(.3, .7, .4, 1.5);
+}
+
+.button-82-pushable:active .button-82-front {
+  transform: translateY(-2px);
+  transition: transform 34ms;
+}
+
+.button-82-pushable:hover .button-82-shadow {
+  transform: translateY(4px);
+  transition:
+    transform
+    250ms
+    cubic-bezier(.3, .7, .4, 1.5);
+}
+
+.button-82-pushable:active .button-82-shadow {
+  transform: translateY(1px);
+  transition: transform 34ms;
+}
+
+.button-82-pushable:focus:not(:focus-visible) {
+  outline: none;
+}
+#video{
+    width: 100%  !important;
+    height: 100% !important;
+}
+.prev{
+  position: absolute;
+  top: 0;
+  left: 0;
+}
