--- a/css/main.css
+++ b/css/main.css
@@ -261,6 +261,39 @@ left: 25px;
 }
 .prev{
   position: absolute;
+  top: 10px;
+  left: 15px !important;
+  border-radius: 40%;
+  z-index: 100;
+}
+.border_iframe{
+  border-radius: 55px;
+}
+.top_border{
+  right: 0px;
+  left: 10px;
+  position: absolute;
+  width: 95%;
+  height: 30px;
+  background-color:rgb(0, 0, 0);
   top: 0;
-  left: 0;
+  -webkit-border-top-left-radius: 60px;
+  -webkit-border-top-right-radius: 60px;
+  -moz-border-radius-topleft: 60px;
+  -moz-border-radius-topright: 60px;
+  border-top-left-radius: 60px;
+  border-top-right-radius: 60px;
+z-index: 2;}
+.z_indexx{
+  z-index: 3;
+}
+.time_elem{
+  position: absolute;
+  z-index: 3;
+  color: white;
+  top: -10px;
+  left: 20px;
+}
+.cursorPinter{
+  cursor: no-drop;
 }
